==== 0.0.7b ====

New features:
	
	* Traffic shaping
	* Multigw

Bug fixes:
	
	* When all the rnodes die, reset the radar resets the qspn counters
	*

==== 0.0.6b ====
	
New features:

	* The NTK_RFC 0008 has been implemented.
	  ( http://lab.dyne.org/Ntk_restricted_ip_classes )

Bug fixes:

	* The NTK_RFC 0007 has been implemented. It fixes an exploitable bug
	  in the ANDNA protocol.

	* NetsukukuD has been tested on big endian machines. A lot of
	  endianness bugs has been fixed during the tests and now it seems to
	  work gracefully.
	  A lot of thanks to Vampire ;*
	
	* The ppp connection to the Internet doesn't set an IP address in the
	  default route of the kernel but only the used ppp interface,
	  therefore NetsukukuD has to deduce it from the IP assigned to the
	  ppp interface, i.e. ppp0.

	* Execute /etc/netsukuku/ip_masquerade.sh only if it is
	  writable just by root.

	* Execute "/etc/netsukuku/ip_masquerade.sh stop" when NetsukukuD is
	  closed.

	* Added a timeout of 60 seconds for the reverse resolution request.

	* A possible memory overrun in the rsa (un)packing functions has been
	  fixed.


==== 0.0.5b  ====

New features:
	* The Internet Gateway Search (NTK_RFC 0003) has been implemented.
	  A node can now share its Internet connection among the other nodes
	  (only in restricted mode). 
	  ( Read the RFC: http://lab.dyne.org/Ntk_IGS )

	* Main part of the NTK_RFC 0001 written, the (g)nodes have now the
	  ability to rehook to avoid IP collision. 
	  ( http://lab.dyne.org/Ntk_gnodes_contiguity )
	  
	* ANDNS has been implemented. It is a new specification of the DNS
	  protocol for Netsukuku. It is compatible with the actual DNS
	  protocol. ( http://lab.dyne.org/Ntk_andna_and_dns )

	* Multi interfaces multipath: if we can reach a rnode trough multiple
	  interfaces, use them all with a multipath route.
	  
	* The dns_wrapper code is no more dependent on Boost.


Bug fixes:
