@@ -177,7 +177,6 @@ int put_free_nodes(PACKET rq_pkt)
 	memset(&pkt, 0, sizeof(PACKET));
 	pkt_addto(&pkt, &rq_pkt.from);
 	pkt_addport(&pkt, ntk_tcp_port);
-	pkt_addflags(&pkt, 0);
 	pkt_addsk(&pkt, my_family, rq_pkt.sk, rq_pkt.sk_type);
 	pkt_add_dev(&pkt, rq_pkt.dev, 1);
 
@@ -378,7 +377,6 @@ int put_qspn_round(PACKET rq_pkt)
 	memset(&pkt, 0, sizeof(PACKET));
 	pkt_addto(&pkt, &rq_pkt.from);
 	pkt_addport(&pkt, ntk_udp_port);
-	pkt_addflags(&pkt, 0);
 	pkt_addsk(&pkt, my_family, rq_pkt.sk, rq_pkt.sk_type);
 	pkt_add_dev(&pkt, rq_pkt.dev, 1);
 
